syntax = "proto2";

option go_package = "./protopb";

import "google/protobuf/empty.proto";

message Movie {
  required int64 budget = 3;
  required string genres = 4;
  required int32 id = 6;
  required string overview = 10;
  required string production_countries = 14;
  required string release_date = 15;
  required double revenue = 16;
  required string spoken_languages = 18;
  required string title = 21;
  optional string clientId = 25;
  optional bool eof = 26;
}

service MovieService {
  rpc StreamMovies (stream Movie) returns (google.protobuf.Empty);
}
